<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity$PlaceholderFragment" >

    <EditText
        android:id="@+id/paste_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/background"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/paste_main_text_hint"
        android:inputType="textMultiLine"
        android:textColor="@color/foreground"
        android:textColorHint="@color/foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/paste_title"
            android:layout_width="269dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:backgroundTint="@color/foreground"
            android:ems="10"
            android:hint="@string/paste_title"
            android:inputType="text"
            android:textColor="@color/foreground"
            android:textColorHighlight="@color/foreground"
            android:textColorHint="@color/foreground" />

        <Button
            android:id="@+id/paste_confirm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/ic_button"
            android:onClick="Paste"
            android:shadowColor="@color/background"
            android:shadowDx="0"
            android:stateListAnimator="@null"
            android:text="@string/paste_confirm"
            android:textColor="@color/foreground" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>